#project(SortMake)
# cmake_minimum_required(VERSION 3.15)
# include_directories(include) 
# file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
# add_library(try3 STATIC ${SRC})  

cmake_minimum_required(VERSION 3.15)
include_directories("E:/VScode/Code/UPUPUP/include") 
# file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/36Kruskal.cpp)
# add_executable(test_output ${SRC})

add_executable(test_output  main.cpp)
